tests/errors/nogilcmeth.pxd
cdef class C:
    fn void f(self) nogil
